WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299130
AX: Hover Text does not enlarge input values
https://bugs.webkit.org/show_bug.cgi?id=299130
Summary
AX: Hover Text does not enlarge input values
kirsten_thomas
Reported
2025-09-18 15:23:46 PDT
Hover Text will enlarge an <input/> element's label, but once text is entered, the value will not be shown in Hover Text in Safari. In Chrome, the input label and value can both be shown in Hover Text. Reduced test case:
https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/input
Turn on hover text Type a value into the input Use hover text on the <input />; hold cmd and move the cursor over the <input /> The input value text should show in a hover text popup. It works on Chrome, but not Safari
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-18 15:23:53 PDT
<
rdar://problem/160891414
>
Tyler Wilcock
Comment 2
2025-09-28 10:46:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51469
EWS
Comment 3
2025-09-29 07:21:54 PDT
Committed
300691@main
(ca4a1990df62): <
https://commits.webkit.org/300691@main
> Reviewed commits have been landed. Closing PR #51469 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug